@@ -1,4 +1,4 @@
-@set UPDATED 14 March 2020
-@set UPDATED-MONTH March 2020
+@set UPDATED 14 November 2020
+@set UPDATED-MONTH November 2020
 @set EDITION 6.2.7
 @set VERSION 6.2.7
